--- a/app/src/main/res/layout/activity_object_sender.xml
+++ b/app/src/main/res/layout/activity_object_sender.xml
@@ -94,8 +94,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_3"
             android:inputType="number"
+            android:maxLength="10"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:imeOptions="actionSend"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
